--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "and": "0.0.3",
     "expo": "~42.0.1",
     "expo-linear-gradient": "~9.2.0",
+    "expo-sqlite": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -26,7 +27,8 @@
     "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
