--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/drawer": "^5.x",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "and": "0.0.3",
@@ -27,6 +28,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
+    "react-navigation-header-buttons": "^6.3.1",
     "react-redux": "^7.2.4",
     "redux-thunk": "^2.3.0"
   },
